fix secondary heading alignment

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -25,6 +25,7 @@ body {
             font-size: 5rem;
         }
     }
+
     &--sub {
         display: block;
         font-size: 2rem;
@@ -41,7 +42,6 @@ body {
 
 
 .heading-secondary {
-    display: inline-block;
     font-size: 3.5rem;
     text-transform: uppercase;
     font-weight: 700;
